V0.25-svn
* Added application/ogg to the list of recognised MIME types.
* [Blue Pie] Added customisation for bluepie.org version
* Allowed canceling of failed tracks (#59)
V0.25
* Overhauled the filename cleaning stuff, hopefully finally fixing issues on
  windows. (#56)
* If the option 'spacesToUnderscore' is 'true' then spaces will be converted to
  underscores in filenames. (#55)
* Handle the case where the emusicj script is a symlink to the real location,
  and use that to find the program directory (#54)
V0.24
* Truncate the pathname to save files to if it gets too long on windows (which
  has stupidly low limits) (#49)
* Added option to allow the user to specify that they don't want cover art to
  be downloaded. This is done by adding the line 'downloadCoverArt=false' to
  ~/.emusicj/emusicj.props (#38)
* Updated build.xml to allow more flexible compiles, such as not always creating
  a dist build (#47)
V0.23
* Allow multiple tracks to be selected (#42)
* Adds auto-remove timer to tracks that were finished when the program 
  started (#41)
* Trim spaces from ends of album/track/artist names as vfat doesn't like them
  (#40)
* Changed default save location of files to ~/Music or ~/My Music (whichever 
  exists), defaulting to the first one if neither do
* [Reggae Country] added customisation for reggaecountry.com
* Fixed an infinite loop if the album/artist/track names contain a path
  wildcard (e.g. %t). Thanks to Hugh Brackett for spotting this one.
V0.22
* Added quotes around $@ in launch script to make it work better with some
  temp file names
* Changed default cover art name for windows and mac to 'folder.jpg'
* Cover art filename can be overridden by coverArtFilename option in
  prefs file
* Current download list saves when files are added, this means that the computer
  crashing won't lose the current progress (#35)
* Added " and & to the stripped out characters, they may be causing issues
  on some file systems (#29 maybe)
V0.21