@@ -7,7 +7,7 @@
 	<classpathentry kind="lib" path="lib/commons-codec-1.3.jar"/>
 	<classpathentry kind="lib" path="lib/commons-logging-api.jar"/>
 	<classpathentry kind="lib" path="lib/guice-1.0.jar"/>
-	<classpathentry kind="lib" path="lib/i686/swt.jar"/>
+	<classpathentry kind="lib" path="lib/i686/swt.jar" sourcepath="lib/swt-src.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
