@@ -1,4 +1,5 @@
 V0.25-svn
+* Added application icon showing up on the right-hand side of the toolbar
 * Added application/ogg to the list of recognised MIME types.
 * [Blue Pie] Added customisation for bluepie.org version
 * Allowed canceling of failed tracks (#59)
